--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
 <center><h4>NOT FOUND</h4><center>
 <P>There's nothing here.
 Sorry, the page you were looking for in this blog does not exist.</p>
+<hr>
+<img src="https://github.com/rhnzd/Rhnzd.github.io/blob/main/Killua%20GIF%20-%20Killua%20-%20Discover%20%26%20Share%20GIFs.gif"></img>
 
