--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<html lang="en">
+<head>
 <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <center><iframe src="https://free.timeanddate.com/clock/i8ahya3l/n631/szw160/szh160/hocbbb/hbw6/cf100/hgr0/fas16/fdi64/mqc000/mqs4/mql20/mqw2/mqd94/mhc000/mhs3/mhl20/mhw2/mhd94/mmc000/mml10/mmw1/mmd94/hmr7/hsc000/hss1/hsl90" frameborder="0" width="160" height="160"></iframe></center>
 
 <hr>
@@ -7,3 +11,4 @@
 <P>There's nothing here.
 Sorry, the page you were looking for in this blog does not exist.</p>
 <hr>
+</body>
