--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </center
 <hr>
 <center><h1>RHNZD.MY.ID</center>
-<center><h4>NOT FOUND</h4><center>
+<hr>
+<center><h4>NOT FOUND</h4><center><br>
 <P>There's nothing here.
 Sorry, the page you were looking for in this blog does not exist.</p>
 <hr>
