--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <hr>
 <center><h1>RHNZD.MY.ID</center>
 <hr>
-<center><h4>NOT FOUND</h4><center><br>
+<center><h4>NOT FOUND </h4><center><br>
+<center><h1>404<h1><center>
 <P>There's nothing here.
 Sorry, the page you were looking for in this blog does not exist.</p>
 <hr>
