--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <center><h4>NOT FOUND </h4><center>
 <center><h1>404<h1></center><br>
 <P>There's nothing here.
-Sorry, the page you were looking for in this blog does not exist.</p>
+Sorry, the page you were looking for in 
+this blog does not exist.</p>
 <hr>
 </body>
